syntax = "proto3";

package proto;

option go_package = "../pb";

import "message.proto";

message ObjectData {
  string fileName = 1;
  bytes data = 2;
  int64 size = 3;
}

message ObjectInfo {
  string fileName = 1;
  string originLocate = 2;
}

message RequiredInfo {
  int64 averageCap = 1;
  int64 requiredSize = 2;
  string targetAddress = 3;
}

service ObjectMigration {
  rpc ReceiveData(stream ObjectData) returns (Response);
  rpc ReceiveObject(ObjectInfo) returns (Response);
  rpc RequireSend(RequiredInfo) returns (Response);
  rpc LeaveCommand(EmptyReq) returns (Response);
  rpc JoinCommand(EmptyReq) returns (Response);
}